# AgentHub

./: .gitignore  AgentHub_PRD_多Agent协作平台.docx  EXPERIENCE_UPGRADE_PLAN.md  LICENSE  README.md  package.json
agenthub-server/: .env.example  _sdk_probe.py  pyproject.toml
agenthub-server/agents/: coder.md  deployer.md  orchestrator.md  planner.md  reviewer.md
agenthub-server/app/: bridge.py  config.py  main.py  schemas.py
agenthub-server/app/adapters/: attachments.py  base.py  schemas.py
agenthub-server/app/api/: deps.py
agenthub-server/app/core/: event_bus.py  message_handler.py  registry.py  run_registry.py  startup.py
agenthub-server/app/db/: engine.py  models.py
agenthub-server/app/eval/: __init__.py  golden_set.py  harness.py  run_golden.py  run_humaneval.py
agenthub-server/app/memory/: conversation_memory.py  summary.py  (+4 more)
agenthub-server/config/: adapters.yaml  mcp.yaml
agenthub-server/tests/: smoke_e2e.py  test_approval_policy.py  test_claude_hooks.py  test_claude_stream_converter.py  test_codex_approval.py  test_codex_retry.py  test_command_whitelist.py  test_context_window.py  test_conversation_controls.py  test_deploy_providers.py  test_deploy_service.py  test_engine.py  test_eval_humaneval.py  test_mcp_config.py  test_memory.py  test_notification_converter.py  test_orchestration_hardening.py  test_permission_manager.py  test_planner.py  test_provider.py  test_reliability_batch6.py  test_review_verdict.py  test_security.py  test_task_executor.py  test_task_planner.py  test_task_runner_events.py  test_task_runner_writelock.py  test_token_meter.py
(+169 files in other folders)
