[tool.poetry]
name = "agenthub-server"
version = "0.1.0"
description = "AgentHub unified adapter layer for AI coding tools"
authors = ["AgentHub Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
websockets = "^12.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
structlog = "^24.2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
# Agent SDK（至少安装一个，运行时通过健康检查自动探测可用性）
claude-agent-sdk = { version = "^0.2.0", optional = true }
openai-codex = { version = "^0.1.0b1", optional = true }

[tool.poetry.extras]
claude = ["claude-agent-sdk"]
codex = ["openai-codex"]
all = ["claude-agent-sdk", "openai-codex"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
